--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "create-error": "^0.3.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "haversine-distance": "^1.2.3",
     "http-errors": "^2.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
