--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.7.2",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.9",
+    "twilio": "^5.4.3"
   }
 }
