--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "bcrypt": "^5.1.1",
     "create-error": "^0.3.1",
     "dotenv": "^16.4.5",
@@ -21,6 +22,7 @@
     "mongoose": "^8.7.2",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "twilio": "^5.4.3"
   }
